Actualizacion de Calificacion-mapamental y dashboard

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -18,7 +18,7 @@
             <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
                <!-- <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>-->
                 <li><h:link outcome="tablero" value="#{etiqueta['home']}"/></li>
-                <li><span>Student Administration</span></li>
+                <li><span>#{profesor['student.administration.title']}</span></li>
             </ul>
 
         <div class="borde-menu2">
