--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -18,7 +18,7 @@
               <!-- <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
                <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>-->
                 <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
-                <li><h:link outcome="tablero" value="Student Administration"/></li>
+                <li><h:link outcome="tablero" value="#{profesor['student.administration.title']}"/></li>
                 <li><span>Student Homework</span></li>
             </ul>
 
