--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -107,7 +107,7 @@
                                         <div class="uk-transition-fade uk-position-cover uk-overlay-default uk-flex uk-flex-center uk-flex-middle">
                                             <h:panelGroup layout="block" styleClass="uk-inline" pt:uk-lightbox="">
                                                 <img src="https://i.ytimg.com/vi/#{tareaActvidadModelo.idActividad}/mqdefault.jpg"/>
-                                                <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#{tareaActvidadModelo.idActividad}"/>
+                                               <ui:remove> <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#{tareaActvidadModelo.idActividad}"/></ui:remove>
                                             </h:panelGroup>
                                         </div>
                                     </div>
