--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -26,11 +26,14 @@
                 <div class=" uk-flex uk-flex-center">
                     <span style="color: white">#{etiqueta['logging.nickname']}</span>
                     <input autocomplete="off" class="uk-input" type="text"/>
-                    Galaxia: <input autocomplete="off" class="uk-input"/>
+                    <span style="color: white"> Galaxia</span>
+                    <input autocomplete="off" class="uk-input"/>
                     <input type="hidden" name="j_password"/>
                     <input type="hidden" name="j_username"/>
-                    <input type="submit" value="#{boton['submit']}" onclick="return cargaContrasenia()" class="uk-button boton"/>
                     <p></p>
+                </div>
+                <div class="uk-flex uk-flex-wrap uk-flex-center uk-margin-medium-top">
+                    <input type="submit" value="#{boton['submit']}" onclick="return cargaContrasenia()" class="uk-button boton-login"/>
                 </div>
                 <h:outputText value="Usuario o contraseña incorrectos, por favor intenta de nuevo"
                               styleClass="uk-margin-small-top"
