--- a/tecolotl-web/src/main/webapp/error/sin-permiso.xhtml
+++ b/tecolotl-web/src/main/webapp/error/sin-permiso.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-    <title>Sin permiso</title>
+    <title>#{etiqueta['no.permiso.title']}</title>
 </h:head>
 <h:body>
     <h:outputStylesheet library="css" name="/error/sin-permiso.css"/>
