--- a/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-    <title>Página no encontrada</title>
+    <title>#{etiqueta['no.encontro.title']}</title>
 </h:head>
 <h:body>
     <h:outputStylesheet library="css" name="/error/no-encontrado.css"/>
