--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -24,9 +24,9 @@
                     </c:forEach>
                 </div>
                 <div class=" uk-flex uk-flex-center">
-                    <span style="color: white">#{etiqueta['logging.nickname']}</span>
+                    <span style="color: white; text-transform: capitalize">#{etiqueta['logging.nickname']}:</span>
                     <input autocomplete="off" class="uk-input" type="text"/>
-                    <span style="color: white"> Galaxia</span>
+                    <span style="color: white; text-transform: capitalize"> Galaxy:</span>
                     <input autocomplete="off" class="uk-input"/>
                     <input type="hidden" name="j_password"/>
                     <input type="hidden" name="j_username"/>
