--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -61,7 +61,7 @@
 				</div>
 				<div>
 					<div style="position:relative;padding-top:52.25%;" class="video-escuadron">
-						<iframe src="https://www.youtube.com/embed/OreuPXTxFLU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""
+						<iframe src="https://www.youtube.com/embed/70tcgH90Nx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""
 								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 					</div>
 					<h1><h:graphicImage library="img" name="esquadron.svg" alt=""/>squadron</h1>
