--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 	<title>Esquadron</title>
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
 	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<h:outputStylesheet library="css" name="estilos-landing.css"/>
 </h:head>
 <h:body>
@@ -61,8 +61,9 @@
 				</div>
 				<div>
 					<div style="position:relative;padding-top:52.25%;" class="video-escuadron">
-						<iframe src="https://www.youtube.com/embed/70tcgH90Nx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""
-								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+<!--						<iframe src="https://www.youtube.com/embed/70tcgH90Nx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""-->
+<!--								style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>-->
+						<video controls=""  style="position:absolute;top:0;left:0;width:100%;height:100%;"/>
 					</div>
 					<h1><h:graphicImage library="img" name="esquadron.svg" alt=""/>squadron</h1>
 					<p>Teachers everywhere create video classes for their students.
@@ -359,9 +360,9 @@
 		</footer>
 	</div>
 
-
+	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
 	<h:outputScript library="js" name="landing/landing.js"/>
-	<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"/>
+	<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
 	<h:outputScript library="js" name="landing/animacion-espacio.js"/>
     <h:outputScript library="js" name="smtp.js"/>
 	<h:outputScript library="js" name="email.js"/>
