--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -248,6 +248,7 @@
 						</div>
 					</div>
 				</div>
+				<div>
 				<h:panelGroup layout="block">
 					<h:panelGroup layout="block">
 						<svg class="rocketManSVG"
@@ -324,6 +325,7 @@
 						</svg>
 					</h:panelGroup>
 				</h:panelGroup>
+				</div>
 			</h:panelGroup>
 		</div>
 
