--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -111,32 +111,47 @@
                                     </div>
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}" data-mapas="#{actividadModelo.mapamental}">
                                         <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
-                                                    <span data-uk-tooltip="title: #{profesor['activity.grammar']}"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
-                                                    <span data-uk-tooltip="title: #{profesor['didactic.guide']}" uk-icon="icon: file-text"/>
-                                                    <span data-uk-tooltip="title: #{profesor['activity.cards']}" uk-icon="icon: commenting"/>
-                                                    <div class="uk-inline">
-                                                        <button data-uk-tooltip="title: #{profesor['think-develop.and.share']}" uk-icon="icon: file-edit"/>
-                                                        <div uk-dropdown="">
-                                                            <ul class="uk-nav uk-dropdown-nav">
+                                            <div class="uk-inline uk-text-center">
+                                                <span data-uk-tooltip="title: #{profesor['activity.grammar']}"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
+                                                <div uk-dropdown="">
+                                                    <span>grammar</span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-inline uk-text-center">
+                                                <span data-uk-tooltip="title: #{profesor['didactic.guide']}" uk-icon="icon: file-text"/>
+                                                <div uk-dropdown="">
+                                                    <span>didactic guide</span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-inline uk-text-center">
+                                                <span data-uk-tooltip="title: #{profesor['activity.cards']}" uk-icon="icon: commenting"/>
+                                                <div uk-dropdown="">
+                                                    <span>cards</span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-inline uk-text-center">
+                                                <button data-uk-tooltip="title: #{profesor['think-develop.and.share']}" uk-icon="icon: file-edit"/>
+                                                <div uk-dropdown="">
+                                                    <ul class="uk-nav uk-dropdown-nav">
 
-                                                            </ul>
-                                                        </div>
-                                                    </div>
+                                                    </ul>
+                                                </div>
+                                            </div>
                                             <ui:remove>
                                                 <div class="uk-width-expand ">
                                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image " library="img" name="icono/listen.svg" /></div>
                                                         <div>
                                                             <h:form>
                                                                 <h:commandLink pt:uk-toggle="#modal-transcript" >
-                                                                    <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
+                                                                    <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image " library="img" name="icono/transcript1.svg" />
                                                                     <f:ajax listener="#{actividadControlador.buscaTranscripcion(actividadModelo)}" render="transcripcion" />
                                                                 </h:commandLink>
                                                             </h:form>
                                                         </div>
-                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
-                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
-                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image " library="img" name="icono/reading.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image  " library="img" name="icono/gramatica.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image  " library="img" name="icono/quizcalifica.svg" /></div>
                                                     </h:panelGroup>
                                                 </div>
                                             </ui:remove>
